# c-beginner-projects

./: CMakeLists.txt  README.md
include/: helpers.h
my-tee/: CMakeLists.txt
my-tee/src/: main.c
number-guessing-game/: .clang-tidy  CMakeLists.txt  README.md
number-guessing-game/include/: utils.h
number-guessing-game/src/: main.c  utils.c
src/: main.c
todo-list-cli/: .clang-tidy  CMakeLists.txt  README.md
todo-list-cli/include/: helpers.h  todos.h
todo-list-cli/src/: helpers.c  main.c  todos.c
